/*
 * StreamTeam
 * Copyright (C) 2019  University of Basel
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package streamTeam.football;

option java_package = "ch.unibas.dmi.dbis.streamTeam.dataStreamElements.protobuf.football";
option java_outer_classname = "ShotOffTargetEventStreamElementPayloadProtos";

// Payload of a shotOffTarget stream element
message ShotOffTargetEventStreamElementPayload {

    double length = 1; // Length of the shot

    double velocity = 2; // Velocity of the shot

    double angle = 3; // Angle of the shot in degree (in playing direction)

    string direction = 4; // Direction category of the shot (in playing direction)
}

// Object identifiers, group identifiers and positions in the content:
// objectIdentifiers[0] = Identifier of the player who kicked the ball
// objectIdentifiers[0] = Identifier of the team whose player kicked the ball
// positions[0] = Position where the ball has been kicked
// positions[1] = Position where the ball has left the field